# Hook-Of-The-Reaper

./: CMakeLists.txt  Global.h  README.md  hookOfTheReaper.cpp  hookOfTheReaper.h  hookOfTheReaper.ui  main.cpp  resources.qrc
COMDeviceList/: ALEDStripLC.cpp  ALEDStripLC.h  ComDeviceList.cpp  ComDeviceList.h  ComPortDevice.cpp  ComPortDevice.h  LightBackground.cpp  LightBackground.h  LightController.cpp  LightController.h  LightExecution.cpp  LightExecution.h  LightGun.cpp  LightGun.h  PacDriveControl.cpp  PacDriveControl.h  UltimarcLC.cpp  UltimarcLC.h
HookerEngine/: GamePlayer.cpp  GamePlayer.h  HookCOMPort.cpp  HookCOMPort.h  HookCOMPortWin.cpp  HookCOMPortWin.h  HookLight.cpp  HookLight.h  HookTCPSocket.cpp  HookTCPSocket.h  HookerEngine.cpp  HookerEngine.h  LightCommand.cpp  LightCommand.h
Windows/: aboutWindow.cpp  aboutWindow.h  aboutWindow.ui  addComDeviceWindow.cpp  addComDeviceWindow.h  addComDeviceWindow.ui  addLightControllerWindow.cpp  addLightControllerWindow.h  addLightControllerWindow.ui  addLightGunWindow.cpp  addLightGunWindow.h  addLightGunWindow.ui  addLightGunWindowV2.cpp  addLightGunWindowV2.h  addLightGunWindowV2.ui  editComDeviceWindow.cpp  editComDeviceWindow.h  editComDeviceWindow.ui  editLightControllerWindow.cpp  editLightControllerWindow.h  editLightControllerWindow.ui  editLightGunWindow.cpp  editLightGunWindow.h  editLightGunWindow.ui  editLightGunWindowV2.cpp  editLightGunWindowV2.h  editLightGunWindowV2.ui  playerAssignWindow.cpp  playerAssignWindow.h  playerAssignWindow.ui  settingsWindow.cpp  settingsWindow.h  settingsWindow.ui  testComPortWindow.cpp  testComPortWindow.h  testComPortWindow.ui  testLightController.cpp  testLightController.h  testLightController.ui
data/: alienUSB.hor  blamcon.hor  customUSB.hor  fusion.hor  jbgun4ir.hor  lgDefault.hor  mx24.hor  nonDefaultLG.hor  openFire.hor  rs3Reaper.hor  settings.hor  xGunner.hor  xenas.hor
data/icons/: icons.qrc  icons.rc
data/sounds/: sounds.qrc
defaultLG/: alien3.txt  confmiss.txt  hotd4.txt  jp.txt  lgi.txt  lgi3d.txt  lgj.txt  rambo.txt
ini/: default.ini
ini/MAME/: digdug.ini
